💥 Test: Triggered error due to missing index.js in worker script

--- a/terraform/tf.j2/cloudflare_r2.tf.j2
+++ b/terraform/tf.j2/cloudflare_r2.tf.j2
@@ -1,7 +1,11 @@
-{% for bucket in r2_buckets %}
-resource "cloudflare_r2_bucket" "{{ bucket.name | replace('-', '_') }}" {
-  account_id = "{{ cloudflare_account_id }}"
-  name       = "{{ bucket.name }}"
-  location   = "{{ bucket.location }}"
+resource "cloudflare_r2_bucket" "my_website_assets" {
+  account_id = var.cloudflare_account_id
+  name       = var.r2_bucket_name
+  location   = var.r2_location
 }
-{% endfor %}
+
+resource "cloudflare_r2_bucket" "backups" {
+  account_id = var.cloudflare_account_id
+  name       = var.r2_backup_bucket
+  location   = var.r2_location
+}
