--- a/terraform/tf.j2/cloudflare_access.tf.j2
+++ b/terraform/tf.j2/cloudflare_access.tf.j2
@@ -14,9 +14,9 @@ resource "cloudflare_access_policy" "{{ policy.name | replace(' ', '_') | lower 
   decision       = "{{ policy.decision }}"
 
   include {
-    email = {{ policy.include_emails }}
-  }
+  email = [
+    "admin@prorespondergear.shop",
+    "devteam@prorespondergear.shop"
+  ]
 }
-{% endfor %}
 
-{% endfor %}
