--- a/terraform/tf.j2/cloudflare_workers.tf.j2
+++ b/terraform/tf.j2/cloudflare_workers.tf.j2
@@ -1,33 +1,11 @@
-{% for worker in workers %}
-resource "cloudflare_worker_script" "{{ worker.name }}" {
-  name     = "{{ worker.script_name }}"
-  content  = file("{{ worker.script_source }}")
+resource "cloudflare_worker_script" "my_website_worker" {
+  name       = "my-website-worker"
+  account_id = var.cloudflare_account_id
+  content    = file(var.worker_script_paths["my-website-worker"])
 }
 
-{% for route in worker.routes %}
-resource "cloudflare_worker_route" "{{ worker.name }}_route_{{ loop.index }}" {
-  zone_id     = "{{ cloudflare_zone_id }}"
-  pattern     = "{{ route }}"
-  script_name = cloudflare_worker_script.{{ worker.name }}.name
+resource "cloudflare_worker_script" "serve_r2_assets" {
+  name       = "serve-r2-assets"
+  account_id = var.cloudflare_account_id
+  content    = file(var.worker_script_paths["serve-r2-assets"])
 }
-{% endfor %}
-
-{% if worker.kv_namespace_id is defined %}
-resource "cloudflare_worker_kv_namespace" "{{ worker.name }}_kv" {
-  title = "{{ worker.kv_namespace_id }}"
-}
-{% endif %}
-
-{% if worker.r2_bucket_binding is defined %}
-resource "cloudflare_worker_script" "{{ worker.name }}_with_r2" {
-  name     = "{{ worker.script_name }}"
-  content  = file("{{ worker.script_source }}")
-
-  r2_bucket_binding {
-    name = "{{ worker.r2_bucket_binding.binding_name }}"
-    bucket_name = "{{ worker.r2_bucket_binding.bucket_name }}"
-  }
-}
-{% endif %}
-
-{% endfor %}
